# strand

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: cxx_coro_strandConfig.cmake.in  strandConfig.cmake.in
include/coro/: base.h  consumer.h  transformer.h
include/coro/strand/: lowres_yield.h  real_scheduler.h  scheduler.h  strand.h  time_marker.h  virtual_scheduler.h  yield.h
include/coro/stream/sampler/: all.h  string.h
src/coro/strand/: real_scheduler.cpp  scheduler.cpp  virtual_scheduler.cpp  yield.cpp
test/: CMakeLists.txt
test/src/coro/: test_consumer.cpp  test_generator.cpp  test_stream_samplers.cpp  test_transformer.cpp
test/src/coro/strand/: test_strand_base.cpp
